refactor: clean up code by removing duplicate entries and improving readability